--- a/traefik/compose.yaml
+++ b/traefik/compose.yaml
@@ -1,87 +1,71 @@
 services:
   traefik:
     image: traefik:v3.4.3
-    command:
-      # Providers
-      - "--providers.docker=true"
-      # - "--providers.docker.exposedbydefault=false"
-
-      # API & Dashboard
-      - "--api.dashboard=true"
-      # - "--api.insecure=false"
-      - "--api.insecure=true"
-
-      # Docker network
-      - "traefik.docker.network=proxy"
-      # EntryPoints
-      - "--entrypoints.web.address=:80"
-      # - "--entrypoints.web.http.redirections.entrypoint.to=websecure"
-      # - "--entrypoints.web.http.redirections.entrypoint.scheme=https"
-      # - "--entrypoints.web.http.redirections.entrypoint.permanent=true"
-      # - "--entrypoints.websecure.address=:443"
-      # - "--entrypoints.websecure.http.tls=true"
-
-      # Observability
-      - "--log.level=INFO"
-      - "--accesslog=true"
-      - "--metrics.prometheus=true"
+    restart: unless-stopped
+    security_opt:
+      - no-new-privileges:true
+    networks:
+      - proxy
     ports:
       - "80:80"
       - "443:443"
       - "8080:8080"
     volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
-    networks:
-      - proxy
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+      - ./certs:/certs:ro
+      - ./dynamic:/dynamic:ro
+    command:
+      # EntryPoints
+      - "--entrypoints.web.address=:80"
+      - "--entrypoints.web.http.redirections.entrypoint.to=websecure"
+      - "--entrypoints.web.http.redirections.entrypoint.scheme=https"
+      - "--entrypoints.web.http.redirections.entrypoint.permanent=true"
+      - "--entrypoints.websecure.address=:443"
+      - "--entrypoints.websecure.http.tls=true"
+
+      # Attach the static configuration tls.yaml file that contains the tls configuration settings
+      - "--providers.file.filename=/dynamic/tls.yaml"
+
+      # Providers
+      - "--providers.docker=true"
+      - "--providers.docker.exposedbydefault=false"
+      - "--providers.docker.network=proxy"
+
+      # API & Dashboard
+      - "--api.dashboard=true"
+      - "--api.insecure=false"
+
+      # Observability
+      - "--log.level=INFO"
+      - "--accesslog=true"
+      - "--metrics.prometheus=true"
+
+      # Let's Encrypt resolver
+      - "--certificatesresolvers.le.acme.email=tech@hectorzurga.com"
+      - "--certificatesresolvers.le.acme.storage=/letsencrypt/acme.json" # Path inside container volume
+      - "--certificatesresolvers.le.acme.httpchallenge.entrypoint=web"
+
+      # - "--certificatesresolvers.le.acme.dnschallenge.provider=your-dns-provider" # Needs provider setup
+
+      # Optionally make 'le' the default resolver for TLS-enabled routers
+      - "--entrypoints.websecure.http.tls.certresolver=le"
+
+    # Traefik Dynamic configuration via Docker labels
+    labels:
+      # Enable self‑routing
+      - "traefik.enable=true"
+
+      # Dashboard router
+      - "traefik.http.routers.dashboard.rule=Host(`dashboard.${HOST}`)"
+      - "traefik.http.routers.dashboard.entrypoints=websecure"
+      - "traefik.http.routers.dashboard.service=api@internal"
+      - "traefik.http.routers.dashboard.tls=true"
+
+      # Basic‑auth middleware
+      - "traefik.http.middlewares.dashboard-auth.basicauth.users=${PASSWORD}"
+      - "traefik.http.routers.dashboard.middlewares=dashboard-auth@docker"
 
 networks:
   proxy:
     name: proxy
     external: false
-#
-# traefik:
-#     image: "traefik:v3.4"
-#     restart: always
-#     labels:
-#       # Enable Traefik for this service, to make it available in the public network
-#       # - traefik.enable=true
-#       # Use the traefik-public network (declared below)
-#       - traefik.docker.network=traefik-public
-#       # admin-auth middleware with HTTP Basic auth
-#       # Using the environment variables USERNAME and HASHED_PASSWORD
-#       # - traefik.http.middlewares.admin-auth.basicauth.users=admin:${HASHED_PASSWORD:?No HASHED_PASSWORD set}
-#       # Uses the environment variable TRAEFIK_DOMAIN
-#       # - traefik.http.routers.traefik-public-http.rule=Host(`${TRAEFIK_DOMAIN:?No TRAEFIK_DOMAIN set}`)
-#       - traefik.http.routers.traefik-public-http.entrypoints=http
-#       # Use the special Traefik service api@internal with the web UI/Dashboard
-#       - traefik.http.routers.traefik-public-http.service=api@internal
-#       # Enable HTTP Basic auth, using the middleware created above
-#       - traefik.http.routers.traefik-public-http.middlewares=admin-auth
-#       # Define the port inside of the Docker service to use
-#       - traefik.http.services.traefik-public.loadbalancer.server.port=8080
-#     command:
-#       # Enable Docker in Traefik, so that it reads labels from Docker services
-#       - --providers.docker=true
-#       # Do not expose all Docker services, only the ones explicitly exposed
-#       - --providers.docker.exposedbydefault=false
-#       # Create an entrypoint http listening on port 80
-#       - --entrypoints.http.address=:80
-#       # Enable the access log, with HTTP requests
-#       - --accesslog
-#       # Enable the Traefik log, for configurations and errors
-#       - --log
-#       # Enable the Dashboard and API
-#       - --api.insecure=true
-
-#     ports:
-#       - 80:80
-#       - 8080:8080
-#     volumes:
-#       - /var/run/docker.sock:/var/run/docker.sock:ro
-#     networks:
-#       - traefik-public
-
-# networks:
-#   traefik-public:
-#     name: traefik-public
-#     external: false
