--- a/traefik/compose.yaml
+++ b/traefik/compose.yaml
@@ -56,7 +56,7 @@ services:
       - "traefik.enable=true"
 
       # Dashboard router
-      - "traefik.http.routers.dashboard.rule=Host(`dashboard.${HOST}`)"
+      - "traefik.http.routers.dashboard.rule=Host(`${HOST}`)"
       - "traefik.http.routers.dashboard.entrypoints=websecure"
       - "traefik.http.routers.dashboard.service=api@internal"
       - "traefik.http.routers.dashboard.tls=true"
