--- a/traefik/compose.yaml
+++ b/traefik/compose.yaml
@@ -14,6 +14,7 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock:ro
       - ./certs:/certs:ro
       - ./dynamic:/dynamic:ro
+      - ./letsencrypt:/letsencrypt
     command:
       # EntryPoints
       - "--entrypoints.web.address=:80"
