--- a/n8n/compose.yml
+++ b/n8n/compose.yml
@@ -1,6 +1,8 @@
 services:
   n8n:
     image: docker.n8n.io/n8nio/n8n
+    ports:
+      - ${PORT}
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.n8n.rule=Host(`${DOMAIN_NAME}`)"
