trying something for portainer

--- a/portainer/compose.yml
+++ b/portainer/compose.yml
@@ -4,8 +4,8 @@ services:
     container_name: portainer
     command: -H unix:///var/run/docker.sock
     restart: always
-    ports:
-      - "9000:9000"
+    # ports:
+    #   - "9000:9000"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - portainer_data:/data
@@ -14,7 +14,7 @@ services:
       - "traefik.enable=true"
       - "traefik.http.routers.frontend.rule=Host(`portainer.${DOMAIN_NAME}`)"
       - "traefik.http.routers.frontend.entrypoints=websecure"
-      - "traefik.http.services.frontend.loadbalancer.server.port=9000"
+      - "traefik.http.services.frontend.loadbalancer.server.port=80"
       - "traefik.http.routers.frontend.service=frontend"
       - "traefik.http.routers.frontend.tls.certresolver=le"
 
