--- a/portainer/compose.yml
+++ b/portainer/compose.yml
@@ -4,8 +4,6 @@ services:
     container_name: portainer
     command: -H unix:///var/run/docker.sock
     restart: always
-    # ports:
-    #   - "9000:9000"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - portainer_data:/data
@@ -15,6 +13,7 @@ services:
       - "traefik.http.routers.frontend.rule=Host(`portainer.${DOMAIN_NAME}`)"
       - "traefik.http.routers.frontend.entrypoints=websecure"
       - "traefik.http.services.frontend.loadbalancer.server.port=80"
+      - "traefik.http.routers.frontend.tls=true"
       - "traefik.http.routers.frontend.service=frontend"
       - "traefik.http.routers.frontend.tls.certresolver=le"
 
@@ -22,6 +21,7 @@ services:
       - "traefik.http.routers.edge.rule=Host(`edge.${DOMAIN_NAME}`)"
       - "traefik.http.routers.edge.entrypoints=websecure"
       - "traefik.http.services.edge.loadbalancer.server.port=8000"
+      - "traefik.http.routers.edge.tls=true"
       - "traefik.http.routers.edge.service=edge"
       - "traefik.http.routers.edge.tls.certresolver=le"
 volumes:
