--- a/portainer/compose.yml
+++ b/portainer/compose.yml
@@ -5,6 +5,7 @@ services:
     command: -H unix:///var/run/docker.sock
     restart: always
     networks:
+      - default
       - proxy
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
