--- a/portainer/compose.yml
+++ b/portainer/compose.yml
@@ -16,7 +16,7 @@ services:
       - "traefik.http.routers.portainer.entrypoints=websecure"
       - "traefik.http.services.portainer.loadbalancer.server.port=9000"
       - "traefik.http.routers.portainer.tls=true"
-      # - "traefik.http.routers.portainer.service=portainer"
+      - "traefik.http.routers.portainer.service=portainer"
       - "traefik.http.routers.portainer.tls.certresolver=le"
 volumes:
   portainer_data:
