--- a/ghost/compose.yml
+++ b/ghost/compose.yml
@@ -30,7 +30,7 @@ services:
     image: mysql:8.0
     restart: always
     environment:
-      - ${MYSQL_ROOT_PASSWORD}
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
     volumes:
       - db:/var/lib/mysql
     networks:
