--- a/ghost/compose.yml
+++ b/ghost/compose.yml
@@ -12,7 +12,7 @@ services:
       # this url value is just an example, and is likely wrong for your environment!
       # url: http://localhost:8080
       # contrary to the default mentioned in the linked documentation, this image defaults to NODE_ENV=production (so development mode needs to be explicitly specified if desired)
-      #NODE_ENV: development
+      NODE_ENV: ${NODE_ENV}
     volumes:
       - ghost:/var/lib/ghost/content
     networks:
